reworked flawed animation logic and issues in items and AlpineData insertions

--- a/public/html/invoices/clientSelect.html
+++ b/public/html/invoices/clientSelect.html
@@ -1,4 +1,4 @@
-<div x-data="clientSelect">
+<div>
   <div class="inset-0 p-0.5 mb-12 align-baseline border rounded-md border-vls/60 dark:border-vls/40">
     <div class="bg-vls3 dark:bg-vdp flex justify-between p-2 rounded-md">
       <div>
