--- a/public/html/invoices2.html
+++ b/public/html/invoices2.html
@@ -1,8 +1,8 @@
 <div x-data="invoiceManager2" class="relative w-full px-12 py-4 2xl:px-20">
-  <div x-data="clientSelect" id="client-select">
+  <div id="client-select">
     <!-- Client selection -->
   </div>
-  <div x-data="tabsInvoice" id="tabs-invoice">
+  <div x-data="tabsInvoice()" id="tabs-invoice">
     <!-- Tabs Invoice Style/Sample  -->
   </div>
   <div x-data="invoicing" id="invo-section">
@@ -10,12 +10,5 @@
   </div>
   <div class="totalsInvoice" id="invo-totals">
     <!-- Totals -->
-  </div>
-
-  <div>
-    <!-- MARK: ADD STYLE MODAL -->
-  </div>
-  <div>
-    <!-- MARK: ADD SAMPLE MODAL -->
   </div>
 </div>
